--- a/src/pages/disclaimer.mdx
+++ b/src/pages/disclaimer.mdx
@@ -3,12 +3,49 @@ import styled from 'styled-components'
 
 <BG />
 
-<div style={{maxWidth: '650px', margin: '0px auto 10rem auto'}}>
-<Title>Uniswap protocol disclaimer
-</Title>
+<div style={{maxWidth: '650px', margin: '5rem auto 15rem auto'}}>
+<Title>Disclaimer</Title>
 
-Uniswap is a decentralized peer-to-peer protocol that people can use to create liquidity and trade ERC-20 tokens. There are three versions of the Uniswap protocol (v1, v2, and v3), each of which is made up of free, public, open-source or source-available software including a set of smart contracts that are deployed on the Ethereum Blockchain. Your use of the Uniswap protocol involves various risks, including, but not limited to, losses while digital assets are being supplied to the Uniswap protocol and losses due to the fluctuation of prices of tokens in a trading pair or liquidity pool. Before using the Uniswap protocol, you should review the relevant documentation to make sure you understand how the Uniswap protocol works. Additionally, just as you can access email email protocols such as SMTP through multiple email clients, you can access the Uniswap protocol through dozens of web or mobile interfaces. You are responsible for doing your own diligence on those interfaces to understand the fees and risks they present.
+Last Updated: August 4th, 2021
 
-AS DESCRIBED IN THE UNISWAP PROTOCOL LICENSES, THE UNISWAP PROTOCOL IS PROVIDED &quot;AS IS&quot;, AT YOUR OWN RISK, AND WITHOUT WARRANTIES OF ANY KIND. Although Universal Navigation Inc. d/b/a/ &quot;Uniswap Labs&quot; ( **&quot;Uniswap Labs&quot;** ) developed much of the initial code for the Uniswap protocol, it does not provide, own, or control the Uniswap protocol, which is run by smart contracts deployed on the Ethereum blockchain. Upgrades and modifications to the protocol are managed in a community-driven way by holders of the UNI governance token. No developer or entity involved in creating the Uniswap protocol will be liable for any claims or damages whatsoever associated with your use, inability to use, or your interaction with other users of, the Uniswap protocol, including any direct, indirect, incidental, special, exemplary, punitive or consequential damages, or loss of profits, cryptocurrencies, tokens, or anything else of value.
+This is a copy of the in-app disclaimer (AGB) of the Nerve Global Client software. This disclaimer does not reference or refer to the website you are currently visiting, 
+nerveglobal.com.
+Nerve Global is a decentralized peer to peer application for user-created challenges and bets. Nerve Global is free, public, open source software and a set of smart contracts 
+written in Solidity that can be deployed to the Ethereum Blockchain. Before using Nerve Global, please review the FAQs and documentation for a detailed explanation on how 
+Nerve Global works.
+
+NRV Corp (the “NRV Corp”) is a company of XXX researchers who are committed to furthering the adoption, research and academic discoveries within XXX. 
+NRV Corp operates educational and user resources for existing and promising applications of XXX software. NRV Corp makes no money from these web properties. 
+NRV Corp operates the nerveglobal.com domain name and various social media accounts. NRV Corp receives no funding or support from the developers of 
+Nerve Global (Nerve Foundation) for these services.
+
+The Nerve Foundation (the "Foundation") is a not-for-profit entity. It does not own or lead Nerve Global, but rather supports and develops the free, 
+open-source protocol that is Nerve Global. Portions of the Nerve Global Protocol are made available under the GNU General Public License and portions 
+under the MIT license -- and the disclaimers contained therein apply including that the Nerve Global Protocol is provided "AS IS", "WITH ALL FAULTS" and "AT YOUR OWN RISK". 
+The Foundation will not be liable for any liability or damages whatsoever associated with your use, inability to use, or your interaction with other users of, the 
+Nerve Global Protocol, including any direct, indirect, incidental, special, exemplary, punitive or consequential damages, loss of profits, NERVE (NRV) tokens,(xNERVE) tokens, 
+Polygon (MATIC) tokens, Ether (ETH) tokens, and any other cryptocurrencies or anything of value, including fiat currency.
+
+You acknowledge that the current version of the Nerve Global Protocol is a beta version and as such has not been fully-tested and may not perform as designed. 
+You should always be thoughtful about the NRV, xNRV, MATIC, ETH or other tokens/cryptocurrencies you use, stake and trade (and can lose) through the Nerve Global Protocol, 
+the concerns regarding loss of these tokens or cryptocurrencies is particularly acute with beta software that may not perform as designed, including that the beta version of 
+the Nerve Global Protocol may not accurately reflect the intent of the smart contracts, the FAQs or the Documentation. Your use of the Nerve Global Protocol involves various 
+risks, including, but not limited to losing tokens/cryptocurrencies due to invalidation. Careful due diligence should be undertaken as to the amount of NRV, xNRV, MATIC, ETH 
+or other tokens/cryptocurrencies you use, stake and trade using the Nerve Global Protocol in beta format with full understanding that any using, staking and trading of 
+these tokens/cryptocurrencies could be subject to total loss. You assume any and all risk associated with your use of the Nerve Global Protocol.
+
+# NRV on Cryptocurrency exchanges
+
+Although the Foundation has not sought to list NRV on cryptocurrency exchanges, it is aware that NRV has been listed on certain exchanges and in the future it may 
+be delisted on these exchanges and/or listed on others. The Company disavows any obligation with respect to the listing of NRV on exchanges and it disavows any 
+responsibility with respect to the value or trading of NRV on exchanges. Persons trading NRV or otherwise engaged in activities involving NRV on exchanges assume 
+any and all risk, including that of total loss, associated with such activities.
+
+You are solely responsible for compliance with all laws that may apply to your particular use of the Nerve Global Protocol. Cryptocurrencies and blockchain 
+technologies have been the subject of scrutiny by various regulatory bodies around the world. The Company makes no representation regarding the application of any laws, 
+including but by no means limited to those relating to gaming, options, derivatives or securities, to your use of the Nerve Global Protocol. Indeed, depending on the 
+jurisdiction and the contemplated use of the Nerve Global Protocol (whether yours or another’s), that use may be considered illegal. You agree that NRV Corp and the 
+Nerve Global GmbH is not responsible for determining whether or which laws may apply to your use of the Nerve Global Protocol. You may modify the Nerve Global Protocol 
+under the terms of the applicable open source license to effectuate your compliance with any applicable laws.
 
 </div>
