update some stuff

--- a/src/pages/disclaimer.mdx
+++ b/src/pages/disclaimer.mdx
@@ -6,33 +6,33 @@ import styled from 'styled-components'
 <div style={{maxWidth: '650px', margin: '5rem auto 15rem auto'}}>
 <Title>Disclaimer</Title>
 
-Last Updated: August 4th, 2021
+Last Updated: November 8th, 2021
 
-This is a copy of the in-app disclaimer (AGB) of the Nerve Global Client software. This disclaimer does not reference or refer to the website you are currently visiting, 
+This is a copy of the in-app disclaimer (AGB) of the Nerve Global application. This disclaimer does not reference or refer to the website you are currently visiting, 
 nerveglobal.com.
 Nerve Global is a decentralized peer to peer application for user-created challenges and bets. Nerve Global is free, public, open source software and a set of smart contracts 
-written in Solidity that can be deployed to the Ethereum Blockchain. Before using Nerve Global, please review the FAQs and documentation for a detailed explanation on how 
+written in Solidity that can be deployed to the Ethereum Blockchain. Before using Nerve Global, please review the <a href="https://docs.nerveglobal.com">documentation</a> for a detailed explanation on how 
 Nerve Global works.
 
-NRV Corp (the “NRV Corp”) is a company of XXX researchers who are committed to furthering the adoption, research and academic discoveries within XXX. 
-NRV Corp operates educational and user resources for existing and promising applications of XXX software. NRV Corp makes no money from these web properties. 
+NRV Corp (the “NRV Corp”) is a company of blockchain researchers who are committed to furthering the adoption, research and academic discoveries within the blockchain space. 
+NRV Corp operates educational and user resources for existing and promising applications. NRV Corp makes no money from these web properties. 
 NRV Corp operates the nerveglobal.com domain name and various social media accounts. NRV Corp receives no funding or support from the developers of 
-Nerve Global (Nerve Foundation) for these services.
+Nerve Global (the Nerve Foundation) for these services.
 
 The Nerve Foundation (the "Foundation") is a not-for-profit entity. It does not own or lead Nerve Global, but rather supports and develops the free, 
-open-source protocol that is Nerve Global. Portions of the Nerve Global Protocol are made available under the GNU General Public License and portions 
-under the MIT license -- and the disclaimers contained therein apply including that the Nerve Global Protocol is provided "AS IS", "WITH ALL FAULTS" and "AT YOUR OWN RISK". 
+open-source application that is Nerve Global. Portions of the Nerve Global application are made available under the GNU General Public License and portions 
+under the MIT license -- and the disclaimers contained therein apply including that the Nerve Global application is provided "AS IS", "WITH ALL FAULTS" and "AT YOUR OWN RISK". 
 The Foundation will not be liable for any liability or damages whatsoever associated with your use, inability to use, or your interaction with other users of, the 
-Nerve Global Protocol, including any direct, indirect, incidental, special, exemplary, punitive or consequential damages, loss of profits, NERVE (NRV) tokens,(xNERVE) tokens, 
+Nerve Global application, including any direct, indirect, incidental, special, exemplary, punitive or consequential damages, loss of profits, NERVE (NRV) tokens,(xNERVE) tokens, 
 Polygon (MATIC) tokens, Ether (ETH) tokens, and any other cryptocurrencies or anything of value, including fiat currency.
 
 You acknowledge that the current version of the Nerve Global Protocol is a beta version and as such has not been fully-tested and may not perform as designed. 
-You should always be thoughtful about the NRV, xNRV, MATIC, ETH or other tokens/cryptocurrencies you use, stake and trade (and can lose) through the Nerve Global Protocol, 
+You should always be thoughtful about the NRV, xNRV, MATIC, ETH or other tokens/cryptocurrencies you use, stake and trade (and can lose) through the Nerve Global application, 
 the concerns regarding loss of these tokens or cryptocurrencies is particularly acute with beta software that may not perform as designed, including that the beta version of 
-the Nerve Global Protocol may not accurately reflect the intent of the smart contracts, the FAQs or the Documentation. Your use of the Nerve Global Protocol involves various 
+the Nerve Global application may not accurately reflect the intent of the smart contracts, the <a href="https://docs.nerveglobal.com">documentation</a>. Your use of the Nerve Global application involves various 
 risks, including, but not limited to losing tokens/cryptocurrencies due to invalidation. Careful due diligence should be undertaken as to the amount of NRV, xNRV, MATIC, ETH 
-or other tokens/cryptocurrencies you use, stake and trade using the Nerve Global Protocol in beta format with full understanding that any using, staking and trading of 
-these tokens/cryptocurrencies could be subject to total loss. You assume any and all risk associated with your use of the Nerve Global Protocol.
+or other tokens/cryptocurrencies you use, stake and trade using the Nerve Global application in beta format with full understanding that any using, staking and trading of 
+these tokens/cryptocurrencies could be subject to total loss. You assume any and all risk associated with your use of the Nerve Global application.
 
 # NRV on Cryptocurrency exchanges
 
@@ -41,11 +41,11 @@ be delisted on these exchanges and/or listed on others. The Company disavows any
 responsibility with respect to the value or trading of NRV on exchanges. Persons trading NRV or otherwise engaged in activities involving NRV on exchanges assume 
 any and all risk, including that of total loss, associated with such activities.
 
-You are solely responsible for compliance with all laws that may apply to your particular use of the Nerve Global Protocol. Cryptocurrencies and blockchain 
+You are solely responsible for compliance with all laws that may apply to your particular use of the Nerve Global application. Cryptocurrencies and blockchain 
 technologies have been the subject of scrutiny by various regulatory bodies around the world. The Company makes no representation regarding the application of any laws, 
-including but by no means limited to those relating to gaming, options, derivatives or securities, to your use of the Nerve Global Protocol. Indeed, depending on the 
-jurisdiction and the contemplated use of the Nerve Global Protocol (whether yours or another’s), that use may be considered illegal. You agree that NRV Corp and the 
-Nerve Global GmbH is not responsible for determining whether or which laws may apply to your use of the Nerve Global Protocol. You may modify the Nerve Global Protocol 
+including but by no means limited to those relating to gaming, options, derivatives or securities, to your use of the Nerve Global application. Indeed, depending on the 
+jurisdiction and the contemplated use of the Nerve Global application (whether yours or another’s), that use may be considered illegal. You agree that NRV Corp, Nerve Global GmbH and the 
+Nerve Foundation is not responsible for determining whether or which laws may apply to your use of the Nerve Global application. You may modify the Nerve Global application 
 under the terms of the applicable open source license to effectuate your compliance with any applicable laws.
 
 </div>
