--- a/src/pages/privacy-policy.mdx
+++ b/src/pages/privacy-policy.mdx
@@ -6,24 +6,23 @@ import styled from 'styled-components'
 <div style={{maxWidth: '650px', margin: '5rem auto 15rem auto'}}>
 <Title>Privacy Policy</Title>
 
-Last Updated: July 28th, 2020
+Last Updated: November 8th, 2021
 
-Welcome to www.nerveglobal.com (the “NRV Site"). NRV Corp (“NRV”, “NRV-G”, "we", "us" or "our") is committed to treating the personal and corporate information of our 
-users with respect and sensitivity. Our privacy commitment is described in this privacy policy (the "Privacy Policy"). NRV Corp provides the NRV Site to you subject 
+Welcome to www.nerveglobal.com (the “Nerve Site", "NRV Site"). NRV Corp (“NRV”, "Nerve", “NRV-G”, "we", "us" or "our") is committed to treating the personal and corporate information of our 
+users with respect and sensitivity. Our privacy commitment is described in this privacy policy (the "Privacy Policy"). NRV Corp provides the Nerve Site to you subject 
 to your acceptance of the Privacy Policy.
 
-NRV Corp is a group of early prediction market researchers who are committed to furthering the adoption, research and academic discoveries within predictive forecasting. 
-NRV Corp operates educational and user resources for existing and promising applications of predictive software. NRV Corp makes no money from these web properties. 
+NRV Corp is a group of researchers who are committed to furthering the adoption, research and academic discoveries within the blockchain space. 
+NRV Corp operates educational and use resources for existing and promising applications. NRV Corp makes no money from these web properties. 
 NRV Corp operates the www.nerveglobal.com domain name and various social media accounts.
 
-NRV Global GmbH is a group of developers and technology professionals who are passionate about the potential of decentralized applications. The Forecast Foundation 
-is a not-for-profit entity, it does not own or lead the Augur protocol ("Augur Protocol"), but rather supports and develops the free, open-source protocol that is Augur.
+Nerve Global GmbH is a group of developers and technology professionals who are passionate about the potential of decentralized applications. The Nerve Foundation 
+is a not-for-profit entity, it does not own or lead Nerve Global ("Nrv", "Nerve"), but rather supports and develops the free, open-source application that is Nerve.
 
-Neither PM Research nor the Forecast Foundation have any role in the operation of markets created on Augur, and do not have the ability to spend funds that are 
-held in escrow on-contract, do not control how markets resolve or are created, do not approve or reject trades or other transactions on the network, and do not 
-have the ability to modify, cancel, undo, or interact with orders on the network. PM Research and the Forecast Foundation have no power to censor, restrict, or curate markets, 
-orders, trades, positions or resolutions on the Augur contracts. PM Research and the Forecast Foundation have no more control over the Augur protocol 
-than anyone else using Ethereum.
+Neither NRV Corp nor the Nerve Foundation have any role in the operation of tasks or bets created on Nerve, and do not have the ability to spend funds that are 
+held in escrow on-contract, do not control how tasks, bets resolve or are created, do not approve or reject those or other transactions on the network, and do not 
+have the ability to modify, cancel, undo, or interact with trasnactions on the network. NRV Corp and the Nerve Foundation have no power to censor, restrict, or curate tasks, bets, 
+transactions or resolutions on the Nerve contracts. NRV Corp and the Nerve Foundation have no more control over the Nerve application than anyone else using Ethereum.
 
 
 </div>
