--- a/src/pages/terms-of-service.mdx
+++ b/src/pages/terms-of-service.mdx
@@ -4,7 +4,7 @@ import styled from 'styled-components'
 <BG />
 
 <div style={{maxWidth: '650px', margin: '0px auto 10rem auto'}}>
-<Title>Terms of Service</Title>
+<Title style={{ fontFamily: "True"}}>Terms of Service</Title>
 
 Last Updated: July 28th, 2020
 
