--- a/src/pages/disclaimer.mdx
+++ b/src/pages/disclaimer.mdx
@@ -4,7 +4,7 @@ import styled from 'styled-components'
 <BG />
 
 <div style={{maxWidth: '650px', margin: '5rem auto 15rem auto'}}>
-<Title>Disclaimer</Title>
+<Title style={{ fontFamily: "True"}}>Disclaimer</Title>
 
 Last Updated: November 8th, 2021
 
