--- a/src/pages/privacy-policy.mdx
+++ b/src/pages/privacy-policy.mdx
@@ -1,5 +1,6 @@
 import BG from '../components/bg'
 import styled from 'styled-components'
+import True from '../styles/fontTrue.css'
 
 <BG />
 
@@ -8,21 +9,21 @@ import styled from 'styled-components'
 
 Last Updated: November 8th, 2021
 
-Welcome to www.nerveglobal.com (the “Nerve Site", "NRV Site"). NRV Corp (“NRV”, "Nerve", “NRV-G”, "we", "us" or "our") is committed to treating the personal and corporate information of our 
-users with respect and sensitivity. Our privacy commitment is described in this privacy policy (the "Privacy Policy"). NRV Corp provides the Nerve Site to you subject 
+Welcome to www.nerveglobal.com (the “Nerve Site", "NERVE Site"). NERVE CORP (NERVE, "Nerve", “NRV-G”, "we", "us" or "our") is committed to treating the personal and corporate information of our 
+users with respect and sensitivity. Our privacy commitment is described in this privacy policy (the "Privacy Policy"). NERVE CORP provides the Nerve Site to you subject 
 to your acceptance of the Privacy Policy.
 
-NRV Corp is a group of researchers who are committed to furthering the adoption, research and academic discoveries within the blockchain space. 
-NRV Corp operates educational and use resources for existing and promising applications. NRV Corp makes no money from these web properties. 
-NRV Corp operates the www.nerveglobal.com domain name and various social media accounts.
+NERVE CORP is a group of researchers who are committed to furthering the adoption, research and academic discoveries within the blockchain space. 
+NERVE CORP operates educational and use resources for existing and promising applications. NERVE CORP makes no money from these web properties. 
+NERVE CORP operates the www.nerveglobal.com domain name and various social media accounts.
 
 Nerve Global GmbH is a group of developers and technology professionals who are passionate about the potential of decentralized applications. The Nerve Foundation 
-is a not-for-profit entity, it does not own or lead Nerve Global ("Nrv", "Nerve"), but rather supports and develops the free, open-source application that is Nerve.
+is a not-for-profit entity, it does not own or lead Nerve Global ("NERVE", "Nerve"), but rather supports and develops the free, open-source application that is Nerve.
 
-Neither NRV Corp nor the Nerve Foundation have any role in the operation of tasks or bets created on Nerve, and do not have the ability to spend funds that are 
+Neither NERVE CORP nor the Nerve Foundation have any role in the operation of tasks or bets created on Nerve, and do not have the ability to spend funds that are 
 held in escrow on-contract, do not control how tasks, bets resolve or are created, do not approve or reject those or other transactions on the network, and do not 
-have the ability to modify, cancel, undo, or interact with trasnactions on the network. NRV Corp and the Nerve Foundation have no power to censor, restrict, or curate tasks, bets, 
-transactions or resolutions on the Nerve contracts. NRV Corp and the Nerve Foundation have no more control over the Nerve application than anyone else using Ethereum.
+have the ability to modify, cancel, undo, or interact with trasnactions on the network. NERVE CORP and the Nerve Foundation have no power to censor, restrict, or curate tasks, bets, 
+transactions or resolutions on the Nerve contracts. NERVE CORP and the Nerve Foundation have no more control over the Nerve application than anyone else using Ethereum.
 
 
 </div>
