--- a/src/pages/terms-of-service.mdx
+++ b/src/pages/terms-of-service.mdx
@@ -1,5 +1,6 @@
 import BG from '../components/bg'
 import styled from 'styled-components'
+import True from '../styles/fontTrue.css'
 
 <BG />
 
@@ -8,9 +9,9 @@ import styled from 'styled-components'
 
 Last Updated: July 28th, 2020
 
-Welcome to www.augur.net (the "Augur Site"). PM Research Ltd ("PM Research") provides the Augur Site to you subject to the following terms of use conditioned on your acceptance without modification of the terms, conditions, and notices contained herein (the "Terms"). Your use of the Augur Site constitutes your agreement to all such Terms. Please read these terms carefully, and keep a copy of them for your reference.
+Welcome to www.nerveglobal.com (the "Nerve Site"). NERVE CORPP provides the Nerve Global Site to you subject to the following terms of use conditioned on your acceptance without modification of the terms, conditions, and notices contained herein (the "Terms"). Your use of the NErve Global Site constitutes your agreement to all such Terms. Please read these terms carefully, and keep a copy of them for your reference.
 
-PM Research Ltd is a group of early prediction market researchers who are committed to furthering the adoption, research and academic discoveries within predictive forecasting. PM Research operates educational and user resources for existing and promising applications of predictive software. PM Research makes no money from these web properties. PM Research Ltd operates the augur.net domain name and various social media accounts. PM Research Ltd receives no funding or support from the developers of Augur (Forecast Foundation) for these services.
+NERVE CORP is a group of early prediction market researchers who are committed to furthering the adoption, research and academic discoveries within predictive forecasting. NERVE CORP operates educational and user resources for existing and promising applications of predictive software. PM Research makes no money from these web properties. PM Research Ltd operates the augur.net domain name and various social media accounts. PM Research Ltd receives no funding or support from the developers of Augur (Forecast Foundation) for these services.
 
 The Forecast Foundation is a group of developers and technology professionals who are passionate about the potential of decentralized applications. The Forecast Foundation is a not-for-profit entity, it does not own or lead the Augur protocol ("Augur Protocol"), but rather supports and develops the free, open-source protocol that is Augur.
 
