--- a/src/pages/privacy-policy.mdx
+++ b/src/pages/privacy-policy.mdx
@@ -4,7 +4,7 @@ import True from '../styles/fontTrue.css'
 
 <BG />
 
-<div style={{maxWidth: '1000px', margin: '5rem auto 15rem auto'}}>
+<div style={{maxWidth: '1000px', padding: '2rem', margin: '5rem auto 15rem auto'}}>
 <Title style={{ fontFamily: "True"}}>Privacy Policy</Title>
 
 **Last Updated: August 2nd, 2022**
