--- a/src/pages/disclaimer.mdx
+++ b/src/pages/disclaimer.mdx
@@ -1,11 +1,10 @@
 import BG from '../components/bg'
 import styled from 'styled-components'
-import True from '../styles/fontTrue.css'
 
 <BG />
 
 <div style={{maxWidth: '1000px', padding: '2rem', margin: '5rem auto 15rem auto'}}>
-<Title style={{ fontFamily: "True"}}>Disclaimer</Title>
+<Title>Disclaimer</Title>
 
 **Last Updated: August 2nd, 2022**
 
