--- a/src/pages/terms-of-service.mdx
+++ b/src/pages/terms-of-service.mdx
@@ -1,11 +1,10 @@
 import BG from '../components/bg'
 import styled from 'styled-components'
-import True from '../styles/fontTrue.css'
 
 <BG />
 
 <div style={{maxWidth: '650px', padding: '2rem', margin: '0px auto 10rem auto'}}>
-<Title style={{ fontFamily: "True"}}>Terms of Service</Title>
+<Title>Terms of Service</Title>
 
 Last Updated: July 28th, 2020
 
